static/css/search.css
/*!
 * Start Bootstrap - Shop Homepage (https://startbootstrap.com/template-overviews/shop-homepage)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
 */

 /* ! Fonts ! */
 @font-face {
	font-family: 'proxima_nova_rgregular';
	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'proxima_nova_rgbold';
	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold') format('svg');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'adelle_rgregular';
	src: url('https://litmus.com/fonts/Emails/adelle_reg-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/adelle_reg-webfont.eot?#iefix') format('embedded-opentype'),
		 url('https://litmus.com/fonts/Emails/adelle_reg-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/adelle_reg-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/adelle_reg-webfont.svg#adelle_rgregular') format('svg');
	font-weight: normal;
	font-style: normal;
}

/* ! CSS ! */

/* ! =================================== General Settings ========================================== */
html {
  height: 100%;
}

body {
  font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
  background-color:#f1f4fa;
}

h1{
  font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
}

.section {
  padding-top: 30px ;
  padding-bottom: 30px;
  margin-left: 10%!important;
  margin-right: 10%!important;
}

.container-fluid {
  padding-left: 0px  !important;
  padding-right: 0px !important;
  width: 80%;
  left: 10%;
}
.container-fluid .row {
  margin-left: 0px !important;
  margin-right: 0px !important;
}
/* ! ======================================================================================== */

/* ! =================================== Nav bar ========================================== */
.navbar{
  z-index: 2;
  padding-left: 10%;
  padding-right: 10%;
  padding-top: 30px;
}

.nav-item {
  font-size: 1.5rem;
  color: #707070;
  padding-left: 80px;
}

.nav-link {
  color: #707070;
}

.nav-link:hover {
  color: #4a4a4a;
}

.navbar-toggler-icon {
  background-image: url(../img/bars-solid.svg)!important;
}

.logo-image{
  max-width: 150px;
}

.nav-selected{
  cursor: default; 
  font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
}



/* ! ======================================================================================== */

/* ! =================================== Banner ========================================== */
.bannerimage {
  width: auto;
  height: 800px;
  background-position-x: right;
  background-position: center;
  margin-bottom: -170px;
  z-index:-1;
  position:sticky;
  display: block;
  margin-left: auto;
  margin-top: -250px;
}

.main_text_search{
  font-weight: bold; 
  font-size: 300%;
  color: #707070;
  line-height: 60px;
}

/* ! ======================================================================================== */

/* ! =================================== Icons ========================================== */

i.fa-angle-right {
  width: 40px;
  height: 40px;
  display: inline-block;
  border-radius: 70px;
  box-shadow: 0 5px 6px -1px rgba(0, 0, 0, 0.15), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  vertical-align: middle;
}

footer i.fab{
  width: 40px;
  height: 40px;
  display: inline-block;
  border-radius: 70px;
  box-shadow: 0 5px 6px -1px rgba(0, 0, 0, 0.15), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  vertical-align: middle;
}

footer i.fa-facebook{
  padding-top: 13px;
  padding-left: 2px;
}

footer i.fa-twitter{
  padding-top: 13px;
  padding-left: 2px;
}

footer i.fa-instagram{
  padding-top: 13px;
  padding-left: 2px;
}

/* ! ======================================================================================== */

/* ! =================================== Footer ========================================== */
.footer {
  background-color: white;
}
.footer_title {
  padding-top:20px;
  padding-bottom: 30px;
  text-align: center;
}

.final_logo {
  width:40%;
  padding-bottom: 20px;
}
.copyright{
  text-align: center;
  padding-top: 30px;
  padding-bottom: 30px;
}

.copyright_text {
  font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
  color: #707070;
  line-height: 170%;
}

.footer-text{
  color: #707070;
  line-height: 170%;
}

.footer a{
  color: #212529;
}

.footer b{
  font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;;
}
/* ! ======================================================================================== */

/* ! =================================== Search bar ========================================== */
.search-bar{
  z-index: 7;
  height: 70px;
  border-radius: 100px;
  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
  background-color: #9CB0F5;
  align-items: center;
  position: sticky;
  left: 20%;
  width:60%;
  padding-top: 9px;
  padding-bottom: 20px;
}
/* ... */

